# SHRDLUBlocks

./: .gitignore  LICENSE.md  README.md  pyproject.toml  setup.cfg
shrdlu_blocks/: __init__.py  control.py  demo.py  geometry.py  scenes.py  typedefs.py  viewer.py
