[metadata]
name = shrdlu_blocks
version = attr: shrdlu_blocks.__version__
description = A simple environment for evaluating and testing natural language understanding systems
long_description = files: README.md, LICENSE
keywords = NLU, natural language, SHRDLU, blocks
license = MIT
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Development Status :: 5 - Production/Stable
    Topic :: Games/Entertainment :: Simulation
    Topic :: Multimedia :: Graphics
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries :: pygame
    Topic :: Software Development :: User Interfaces
    Topic :: Text Processing :: Linguistic

[options]
include_package_data = True
packages = find:
install_requires =
    pygame
