[metadata]
name = shrdlu_blocks
version = attr: shrdlu_blocks.__version__
author = Aaron Hosford
author_email = hosford42@gmail.com
url = https://github.com/hosford42/SHRDLUBlocks
project_urls =
    Bug Tracker = https://github.com/hosford42/SHRDLUBlocks/issues
description = A simple environment for evaluating and testing natural language understanding systems
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
keywords = NLU, natural language, SHRDLU, blocks
license = MIT
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Development Status :: 5 - Production/Stable
    Topic :: Games/Entertainment :: Simulation
    Topic :: Multimedia :: Graphics
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries :: pygame
    Topic :: Software Development :: User Interfaces
    Topic :: Text Processing :: Linguistic

[options]
include_package_data = True
packages = find:
install_requires =
    pygame
